--- a/docs/cognitive_service_vision_image_composition.ipynb
+++ b/docs/cognitive_service_vision_image_composition.ipynb
@@ -5,11 +5,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Tutorial: Cognitive Service Vision Product Recognition using Python\n",
+    "# Tutorial: Cognitive Service Vision Image Composition using Python\n",
     "\n",
-    "This is a tutorial about using Cognitive Service Vision Product Recognition\n",
+    "This is a tutorial about using Cognitive Service Vision Image Composition. Cognitive Service Vision Image Composition are collection of tools to pre-process images before running product recognition, so that better result can be achieved\n",
     "\n",
-    "Currently, product recognition feature are available in **EastUS**, **West US2**, and **West Europe** regions.\n",
+    "Currently, image composition feature are available in **EastUS**, **West US2**, and **West Europe** regions.\n",
     "\n",
     "Please create a computer vision resource on Azure portal, in **EastUS**, **West US2**, or **West Europe** region, if you don't already have one. You can use [Multi-service resource](https://learn.microsoft.com/en-us/azure/cognitive-services/cognitive-services-apis-create-account?tabs=multiservice%2Canomaly-detector%2Clanguage-service%2Ccomputer-vision%2Cwindows) as well. "
    ]
@@ -21,7 +21,7 @@
    "source": [
     "## Install the python samples package\n",
     "\n",
-    "Install the sample code including utility code helping you use Python to run product recognition in this tutorial"
+    "Install the sample code including utility code helping you use Python to run product recognition in this tutorial."
    ]
   },
   {
@@ -76,19 +76,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Pre-process your image using the image composition tool (Optional)\n",
+    "## Run image stitching\n",
     "\n",
-    "Follow the tutorial [here](./cognitive_service_vision_image_composition.ipynb) to stitch and rectify your images."
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Run product recognition with pre-built model\n",
-    "\n",
-    "You can run product recognition to detect products and gaps using our prebuilt model."
+    "When your shelf is very long that one single camera shot cannot capture the entire length, use image stitching tool to stitching all of them into one"
    ]
   },
   {
@@ -97,32 +87,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import uuid\n",
-    "from cognitive_service_vision_product_recognition_python_samples import ProductRecognitionClient, ProductRecognition\n",
-    "client = ProductRecognitionClient(resource_type, resource_name, multi_service_endpoint, resource_key)\n",
     "\n",
-    "run_name = uuid.uuid4()\n",
-    "model_name = 'ms-pretrained-product-detection'\n",
-    "run = ProductRecognition(run_name, model_name)\n",
+    "from cognitive_service_vision_model_customization_python_samples.clients import ImageCompositionClient\n",
+    "from cognitive_service_vision_model_customization_python_samples.models import ImageStitchingRequest\n",
     "\n",
-    "with open('./media/microsoft_logo.png', 'rb') as f:\n",
-    "    img = f.read()\n",
+    "client = ImageCompositionClient(resource_type, resource_name, multi_service_endpoint, resource_key)\n",
     "\n",
-    "client.create_run(run, img, 'image/png')\n",
-    "client.wait_for_completion(run_name, model_name)\n",
-    "client.delete_run(run_name, model_name)"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Run product recognition with customized product recognition model\n",
+    "# Example for image stitching\n",
+    "image_urls = [\n",
+    "    \"https://example.com/image1.jpg\",\n",
+    "    \"https://example.com/image2.jpg\"\n",
+    "]\n",
     "\n",
-    "### Prerequisite\n",
+    "stitch_request = ImageStitchingRequest(images=image_urls)\n",
+    "stitched_image = client.stitch_images(request=stitch_request)\n",
     "\n",
-    "Follow the [Cognitive Service Vision Model Customization document](https://github.com/Azure-Samples/cognitive-service-vision-model-customization-python-samples/blob/main/docs/cognitive_service_vision_model_customization.ipynb) to train a customized product recognition model and replace the corresponding model_name in the below code cell."
+    "with open(\"stitched_image.jpg\", \"wb\") as file:\n",
+    "    file.write(stitched_image)"
    ]
   },
   {
@@ -130,22 +111,14 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "import uuid\n",
-    "from cognitive_service_vision_product_recognition_python_samples import ProductRecognitionClient, ProductRecognition\n",
-    "product_recognition_client = ProductRecognitionClient(resource_type, resource_name, multi_service_endpoint, resource_key)\n",
-    "\n",
-    "run_name = uuid.uuid4()\n",
-    "model_name = '{specify_your_customized_product_recognition_model_name}'\n",
-    "run = ProductRecognition(run_name, model_name)\n",
-    "\n",
-    "with open('./media/microsoft_logo.png', 'rb') as f:\n",
-    "    img = f.read()\n",
-    "\n",
-    "client.create_run(run, img, 'image/png')\n",
-    "client.wait_for_completion(run_name, model_name)\n",
-    "client.delete_run(run_name, model_name)"
-   ]
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
