--- a/docs/cognitive_service_vision_image_composition.ipynb
+++ b/docs/cognitive_service_vision_image_composition.ipynb
@@ -78,7 +78,11 @@
    "source": [
     "## Run image stitching\n",
     "\n",
-    "When your shelf is very long that one single camera shot cannot capture the entire length, use image stitching tool to stitching all of them into one"
+    "When your shelf is very long that one single camera shot cannot capture the entire length, use image stitching tool to stitching all of them into one.\n",
+    "\n",
+    "### Prepare image urls for running image stitching\n",
+    "\n",
+    "Image stitching tool require a list of accessible image urls to stitch the image."
    ]
   },
   {
@@ -87,17 +91,84 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "image_urls = [\n",
+    "    \"https://example.com/image1.jpg\",\n",
+    "    \"https://example.com/image2.jpg\"\n",
+    "]"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Upload local images to Azure Storage Blob Container and get SAS URLs (Optional)\n",
     "\n",
+    "If you have images locally, consider putting them into a Azure Storage Account Container and get the SAS url for each of the images.\n",
+    "Below is the example code to upload images for stitching "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "from datetime import datetime, timedelta\n",
+    "from azure.storage.blob import BlobServiceClient, BlobSasPermissions, generate_blob_sas\n",
+    "\n",
+    "# Replace these values with your Azure Storage Account credentials\n",
+    "connection_string = \"your_connection_string\"\n",
+    "container_name = \"your_container_name\"\n",
+    "\n",
+    "# Initialize the BlobServiceClient\n",
+    "blob_service_client = BlobServiceClient.from_connection_string(connection_string)\n",
+    "\n",
+    "# Create a new container if it doesn't exist\n",
+    "container_client = blob_service_client.get_container_client(container_name)\n",
+    "container_client.create_container(exist_ok=True)\n",
+    "\n",
+    "# Upload images to the container\n",
+    "image_directory = \"path/to/your/images\"\n",
+    "image_files = os.listdir(image_directory)\n",
+    "\n",
+    "for image_file in image_files:\n",
+    "    blob_client = container_client.get_blob_client(image_file)\n",
+    "    with open(os.path.join(image_directory, image_file), \"rb\") as data:\n",
+    "        blob_client.upload_blob(data, overwrite=True)\n",
+    "        print(f\"{image_file} uploaded to {container_name} container\")\n",
+    "\n",
+    "# Get list of SAS URLs\n",
+    "image_urls = []\n",
+    "expiry_time = datetime.utcnow() + timedelta(hours=1)\n",
+    "\n",
+    "for image_file in image_files:\n",
+    "    blob_client = container_client.get_blob_client(image_file)\n",
+    "    sas_token = generate_blob_sas(\n",
+    "        account_name=blob_client.account_name,\n",
+    "        container_name=blob_client.container_name,\n",
+    "        blob_name=blob_client.blob_name,\n",
+    "        snapshot=None,\n",
+    "        account_key=blob_client.credential.account_key,\n",
+    "        permission=BlobSasPermissions(read=True),\n",
+    "        expiry=expiry_time\n",
+    "    )\n",
+    "\n",
+    "    sas_url = f\"{blob_client.url}?{sas_token}\"\n",
+    "    image_urls.append(sas_url)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "from cognitive_service_vision_model_customization_python_samples.clients import ImageCompositionClient\n",
     "from cognitive_service_vision_model_customization_python_samples.models import ImageStitchingRequest\n",
     "\n",
     "client = ImageCompositionClient(resource_type, resource_name, multi_service_endpoint, resource_key)\n",
-    "\n",
-    "# Example for image stitching\n",
-    "image_urls = [\n",
-    "    \"https://example.com/image1.jpg\",\n",
-    "    \"https://example.com/image2.jpg\"\n",
-    "]\n",
     "\n",
     "stitch_request = ImageStitchingRequest(images=image_urls)\n",
     "stitched_image = client.stitch_images(request=stitch_request)\n",
@@ -108,10 +179,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'ImageRectificationControlPoints' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32md:\\Sources\\cognitive-service-vision-product-recognition-python-samples\\docs\\cognitive_service_vision_image_composition.ipynb Cell 11\u001b[0m in \u001b[0;36m<cell line: 3>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/Sources/cognitive-service-vision-product-recognition-python-samples/docs/cognitive_service_vision_image_composition.ipynb#X20sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39m# Example for image rectification\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/Sources/cognitive-service-vision-product-recognition-python-samples/docs/cognitive_service_vision_image_composition.ipynb#X20sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m image_url \u001b[39m=\u001b[39m \u001b[39m\"\u001b[39m\u001b[39mhttps://example.com/image.jpg\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/d%3A/Sources/cognitive-service-vision-product-recognition-python-samples/docs/cognitive_service_vision_image_composition.ipynb#X20sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m control_points \u001b[39m=\u001b[39m ImageRectificationControlPoints(\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/Sources/cognitive-service-vision-product-recognition-python-samples/docs/cognitive_service_vision_image_composition.ipynb#X20sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m     top_left\u001b[39m=\u001b[39mNormalizedCoordinate(x\u001b[39m=\u001b[39m\u001b[39m0.1\u001b[39m, y\u001b[39m=\u001b[39m\u001b[39m0.1\u001b[39m),\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/Sources/cognitive-service-vision-product-recognition-python-samples/docs/cognitive_service_vision_image_composition.ipynb#X20sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m     top_right\u001b[39m=\u001b[39mNormalizedCoordinate(x\u001b[39m=\u001b[39m\u001b[39m0.9\u001b[39m, y\u001b[39m=\u001b[39m\u001b[39m0.1\u001b[39m),\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/Sources/cognitive-service-vision-product-recognition-python-samples/docs/cognitive_service_vision_image_composition.ipynb#X20sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m     bottom_left\u001b[39m=\u001b[39mNormalizedCoordinate(x\u001b[39m=\u001b[39m\u001b[39m0.1\u001b[39m, y\u001b[39m=\u001b[39m\u001b[39m0.9\u001b[39m),\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/Sources/cognitive-service-vision-product-recognition-python-samples/docs/cognitive_service_vision_image_composition.ipynb#X20sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m     bottom_right\u001b[39m=\u001b[39mNormalizedCoordinate(x\u001b[39m=\u001b[39m\u001b[39m0.9\u001b[39m, y\u001b[39m=\u001b[39m\u001b[39m0.9\u001b[39m)\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/Sources/cognitive-service-vision-product-recognition-python-samples/docs/cognitive_service_vision_image_composition.ipynb#X20sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m )\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/Sources/cognitive-service-vision-product-recognition-python-samples/docs/cognitive_service_vision_image_composition.ipynb#X20sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m rectify_request \u001b[39m=\u001b[39m ImageRectificationRequest(url\u001b[39m=\u001b[39mimage_url, control_points\u001b[39m=\u001b[39mcontrol_points)\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/Sources/cognitive-service-vision-product-recognition-python-samples/docs/cognitive_service_vision_image_composition.ipynb#X20sZmlsZQ%3D%3D?line=10'>11</a>\u001b[0m rectified_image \u001b[39m=\u001b[39m client\u001b[39m.\u001b[39mrectify_image(request\u001b[39m=\u001b[39mrectify_request)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'ImageRectificationControlPoints' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "from cognitive_service_vision_model_customization_python_samples.models import (\n",
+    "    ImageRectificationRequest,\n",
+    "    ImageRectificationControlPoints,\n",
+    "    NormalizedCoordinate\n",
+    ")\n",
+    "\n",
+    "# Accessible image url for image to be rectified, if you have images locally, can also follow the image upload steps above\n",
+    "image_url = \"https://example.com/image.jpg\"\n",
+    "\n",
+    "control_points = ImageRectificationControlPoints(\n",
+    "    top_left=NormalizedCoordinate(x=0.1, y=0.1),\n",
+    "    top_right=NormalizedCoordinate(x=0.9, y=0.1),\n",
+    "    bottom_left=NormalizedCoordinate(x=0.1, y=0.9),\n",
+    "    bottom_right=NormalizedCoordinate(x=0.9, y=0.9)\n",
+    ")\n",
+    "\n",
+    "rectify_request = ImageRectificationRequest(url=image_url, control_points=control_points)\n",
+    "rectified_image = client.rectify_image(request=rectify_request)\n",
+    "\n",
+    "with open(\"rectified_image.jpg\", \"wb\") as file:\n",
+    "    file.write(rectified_image)"
+   ]
   },
   {
    "cell_type": "code",
