--- a/docs/cognitive_service_vision_product_recognition.ipynb
+++ b/docs/cognitive_service_vision_product_recognition.ipynb
@@ -122,7 +122,11 @@
     "\n",
     "### Prerequisite\n",
     "\n",
-    "Follow the [Cognitive Service Vision Model Customization document](https://github.com/Azure-Samples/cognitive-service-vision-model-customization-python-samples/blob/main/docs/cognitive_service_vision_model_customization.ipynb) to train a customized product recognition model and replace the corresponding model_name in the below code cell."
+    "Follow the [Cognitive Service Vision Model Customization document](https://github.com/Azure-Samples/cognitive-service-vision-model-customization-python-samples/blob/main/docs/cognitive_service_vision_model_customization.ipynb) to train a customized product recognition model\n",
+    "\n",
+    "Note that for product recognition model training, the dataset type needs to be **ObjectDetection**\n",
+    "\n",
+    "Once you finished training the model, replace the corresponding model_name in the below code cell."
    ]
   },
   {
