--- a/docs/cognitive_service_vision_image_composition.ipynb
+++ b/docs/cognitive_service_vision_image_composition.ipynb
@@ -178,22 +178,20 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 6,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'ImageRectificationControlPoints' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32md:\\Sources\\cognitive-service-vision-product-recognition-python-samples\\docs\\cognitive_service_vision_image_composition.ipynb Cell 11\u001b[0m in \u001b[0;36m<cell line: 3>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/Sources/cognitive-service-vision-product-recognition-python-samples/docs/cognitive_service_vision_image_composition.ipynb#X20sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39m# Example for image rectification\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/Sources/cognitive-service-vision-product-recognition-python-samples/docs/cognitive_service_vision_image_composition.ipynb#X20sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m image_url \u001b[39m=\u001b[39m \u001b[39m\"\u001b[39m\u001b[39mhttps://example.com/image.jpg\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/d%3A/Sources/cognitive-service-vision-product-recognition-python-samples/docs/cognitive_service_vision_image_composition.ipynb#X20sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m control_points \u001b[39m=\u001b[39m ImageRectificationControlPoints(\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/Sources/cognitive-service-vision-product-recognition-python-samples/docs/cognitive_service_vision_image_composition.ipynb#X20sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m     top_left\u001b[39m=\u001b[39mNormalizedCoordinate(x\u001b[39m=\u001b[39m\u001b[39m0.1\u001b[39m, y\u001b[39m=\u001b[39m\u001b[39m0.1\u001b[39m),\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/Sources/cognitive-service-vision-product-recognition-python-samples/docs/cognitive_service_vision_image_composition.ipynb#X20sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m     top_right\u001b[39m=\u001b[39mNormalizedCoordinate(x\u001b[39m=\u001b[39m\u001b[39m0.9\u001b[39m, y\u001b[39m=\u001b[39m\u001b[39m0.1\u001b[39m),\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/Sources/cognitive-service-vision-product-recognition-python-samples/docs/cognitive_service_vision_image_composition.ipynb#X20sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m     bottom_left\u001b[39m=\u001b[39mNormalizedCoordinate(x\u001b[39m=\u001b[39m\u001b[39m0.1\u001b[39m, y\u001b[39m=\u001b[39m\u001b[39m0.9\u001b[39m),\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/Sources/cognitive-service-vision-product-recognition-python-samples/docs/cognitive_service_vision_image_composition.ipynb#X20sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m     bottom_right\u001b[39m=\u001b[39mNormalizedCoordinate(x\u001b[39m=\u001b[39m\u001b[39m0.9\u001b[39m, y\u001b[39m=\u001b[39m\u001b[39m0.9\u001b[39m)\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/Sources/cognitive-service-vision-product-recognition-python-samples/docs/cognitive_service_vision_image_composition.ipynb#X20sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m )\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/Sources/cognitive-service-vision-product-recognition-python-samples/docs/cognitive_service_vision_image_composition.ipynb#X20sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m rectify_request \u001b[39m=\u001b[39m ImageRectificationRequest(url\u001b[39m=\u001b[39mimage_url, control_points\u001b[39m=\u001b[39mcontrol_points)\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/Sources/cognitive-service-vision-product-recognition-python-samples/docs/cognitive_service_vision_image_composition.ipynb#X20sZmlsZQ%3D%3D?line=10'>11</a>\u001b[0m rectified_image \u001b[39m=\u001b[39m client\u001b[39m.\u001b[39mrectify_image(request\u001b[39m=\u001b[39mrectify_request)\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'ImageRectificationControlPoints' is not defined"
-     ]
-    }
-   ],
+   "source": [
+    "## Run image recification\n",
+    "\n",
+    "With image recitifcation, product recognition and planogram matching results will be better"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "from cognitive_service_vision_model_customization_python_samples.models import (\n",
     "    ImageRectificationRequest,\n",
@@ -217,13 +215,6 @@
     "with open(\"rectified_image.jpg\", \"wb\") as file:\n",
     "    file.write(rectified_image)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
